# opengl_math

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Makefile.am  config.h  configure.ac  declspec.h
cmake/: FindCheck.cmake
curves/: CubicCurveConnectDecl.h  Curve.h  CurveSample.h  LinearCurve.cpp  LinearCurve.h  TessellationQuality.h  Tessellator.cpp
include/: CMakeLists.txt
include/opengl_math/: CMakeLists.txt
include/opengl_math/bounds/: CMakeLists.txt  axis_aligned_2d.h  axis_aligned_2d.inl
include/opengl_math/combinatorics/: CMakeLists.txt  algorithms.h
include/opengl_math/core/: CMakeLists.txt  enumerations.h  memory_leaks.h  platform.h
include/opengl_math/curves/: CMakeLists.txt  cubic_curve.h  cubic_curve.inl  curve_sample_3d.h  curve_sample_3d.inl
include/opengl_math/math/: CMakeLists.txt  algebra.h  geometry.h  geometry.inl  matrix.h  numbers.h  vector.h
include/opengl_math/matrices/: CMakeLists.txt  type_matrix_2X2.h  type_matrix_2X2.inl  type_matrix_3X3.h  type_matrix_3X3.inl  type_matrix_4X4.h  type_matrix_4X4.inl
include/opengl_math/planes/: CMakeLists.txt  plane_3d.h
include/opengl_math/primitives/: CMakeLists.txt  conversions.h
include/opengl_math/primitives/colors/: CMakeLists.txt  type_color_rgb.h  type_color_rgb.inl  type_color_rgba.h  type_color_rgba.inl
include/opengl_math/primitives/points/: CMakeLists.txt  type_point_2d.h  type_point_3d.h  type_point_3d.inl
include/opengl_math/primitives/texcoords/: CMakeLists.txt  type_texcoord_2d.h  type_texcoord_2d.inl  type_texcoord_3d.h  type_texcoord_4d.h  type_texcoord_4d.inl
include/opengl_math/primitives/vectors/: CMakeLists.txt  type_vector_2d.h  type_vector_2d.inl  type_vector_3d.h  type_vector_3d.inl  type_vector_4d.h  type_vector_4d.inl
include/opengl_math/shapes/: enumerations.h  line.h  line.inl  sphere.h  sphere.inl  triangle.h  triangle.inl
include/opengl_math/tessellation/: CMakeLists.txt  enumerations.h  tessellated_triangle_data.h  tessellated_triangle_data.inl  tessellation_ops.h  tessellation_ops.inl
includes/bounds/: axis_aligned_2d.h  axis_aligned_2d.inl
includes/combinatorics/: algorithms.h
includes/core/: enumerations.h  memory_leaks.h  platform.h
includes/curves/: CubicCurve.cpp  CubicCurve.h  CubicCurveConnectDecl.h  CubicCurveDecl.h  Curve.cpp  CurveSample.cpp  CurveSample.h  LinearCurve.cpp  LinearCurve.h  TessellationQuality.cpp  Tessellator.h  cubic_curve.h  cubic_curve.inl  curve.h  curve.inl  curve_3d.h  curve_3d.inl  curve_sample.inl  curve_sample_3d.h  curve_sample_3d.inl  tessellation_quality.h  tessellation_quality.inl  tessellator.inl
includes/math/: algebra.h  clamp.h  matrix.h  numbers.h  sqrt.h  trig.h  vector.h
includes/matrices/: type_matrix_2X2.h  type_matrix_2X2.inl  type_matrix_3X3.h  type_matrix_3X3.inl  type_matrix_4X4.h  type_matrix_4X4.inl
includes/planes/: plane_3d.h  plane_3d.inl
includes/primitives/: conversions.h
includes/primitives/colors/: type_color_rgb.h  type_color_rgb.inl  type_color_rgba.h  type_color_rgba.inl
includes/primitives/points/: type_point_2d.h  type_point_2d.inl  type_point_3d.h  type_point_3d.inl
includes/primitives/texcoords/: type_texcoord_2d.h  type_texcoord_2d.inl  type_texcoord_3d.h  type_texcoord_3d.inl  type_texcoord_4d.h  type_texcoord_4d.inl
includes/primitives/vectors/: type_vector_2d.h  type_vector_2d.inl  type_vector_3d.h  type_vector_3d.inl  type_vector_4d.h  type_vector_4d.inl
lib/: CMakeLists.txt  Makefile  Makefile.am
m4/: ax_valgrind_check.m4
math/: clamp.h  matrix.h  sqrt.h
matrices/: README.md  type_matrix_2X2.h  type_matrix_2X2.inl  type_matrix_4X4.inl
primitives/colors/: type_color_rgb.h  type_color_rgb.inl  type_color_rgba.h  type_color_rgba.inl
primitives/points/: type_point_2d.h  type_point_3d.h
primitives/texcoords/: type_texcoord_2d.inl  type_texcoord_4d.h
primitives/vectors/: type_vector_2d.h  type_vector_3d.h  type_vector_3d.inl
tests/: CMakeLists.txt  Makefile  Makefile.am  check_axis_aligned_2d  check_axis_aligned_2d.cpp  check_combinatorics  check_combinatorics.cpp  check_curves  check_curves.cpp  check_math.cpp  check_numbers.cpp  check_operations.cpp  check_planes.cpp  check_shapes.cpp  check_tessellation.cpp  check_type_color.cpp  check_type_matrix.cpp  check_type_point.cpp  check_type_texcoord.cpp  check_type_vector.cpp  main.cpp  suite.cpp  test_axis_aligned_2d.cpp  test_axis_aligned_2d.h  test_base.h  test_combinatorics.cpp  test_combinatorics.h  test_curves.cpp  test_curves.h  test_math.cpp  test_math.h  test_numbers.cpp  test_numbers.h  test_operations.cpp  test_operations.h  test_planes.cpp  test_planes.h  test_type_color.cpp  test_type_color.h  test_type_matrix.cpp  (+7 more)
tests/include/: helpers.h  suite.h
tests/math/: Makefile  Makefile.am  configure.ac  math.vcxproj
tests/matrices/: Makefile  Makefile.am  configure.ac  type_matrix.vcxproj
tests/numbers/: Makefile  Makefile.am  configure.ac  numbers.vcxproj
tests/operations/: Makefile  Makefile.am  configure.ac  operations.vcxproj
tests/primitives/colors/: Makefile  Makefile.am  configure.ac  type_color.vcxproj
tests/primitives/points/: Makefile  Makefile.am  configure.ac  type_point.h  type_point.vcxproj
tests/primitives/texcoord/: Makefile  Makefile.am  configure.ac  type_texcoord.h  type_texcoord.vcxproj
tests/primitives/vectors/: Makefile  Makefile.am  configure.ac  type_vectors.vcxproj
tools/: autotools_clr.sh  autotools_gen.sh
